--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,11 @@ body header nav buttons:hover {
     background-color: inherit;
 }
 
-#content {
+/* ---------------HOME PAGE---------------- */
+
+#content .home-page,
+#content .menu-page
+ {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 5fr 5fr;
@@ -47,16 +51,59 @@ body header nav buttons:hover {
     padding: 20px;
 }
 
-#content h1 {
+#content .home-page h1 {
     grid-row: 1;
 }
-#content p {
+#content .home-page p {
     grid-row: 2;
 }
-#content img {
+#content .home-page img {
     width: 400px;
     grid-row: 2;
+    grid-column: 1;
 }
+
+/* ---------------MENU PAGE------------------ */
+
+#content .menu-page h1{
+    grid-column: 2;
+    font-family: "Great Vibes", cursive;
+    justify-self: center;
+}
+#content .menu-page div {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    grid-column: 2;
+    grid-row: 2;
+    justify-self: center;
+    gap: 30px;
+    
+}
+#content .menu-page div ul {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(3,1fr);
+    justify-items: center;
+    align-items: center;
+
+}
+#content .menu-page div ul li {
+    list-style-type: none;
+    font-family: "Great Vibes", cursive;
+    font-size: 24px;
+    grid-column: 1;
+}
+
+#content .menu-page div ul img {
+    width: 100px;
+    grid-column: 2;
+    grid-row: 1/3;
+   
+}
+
+
+
 
 footer {
     display: grid;
