--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,16 @@
 * {
    padding: 0;
    margin: 0;
-   background-color: blanchedalmond;
-   font-family: 'Roboto';
+   /* background-color: blanchedalmond; */
+  
+}
+
+img {
+    border-radius: 20px;
 }
 body {
     height: 100vh;
+   
 }
 
 body header {
@@ -14,6 +19,7 @@ body header {
     background-color: black;
     padding: 20px;
     position: sticky;
+    font-family: 'Roboto';
 }
 
 body header img {
@@ -27,6 +33,7 @@ body header nav {
     font-weight: 700;
     background-color: inherit;
     align-items: center;
+    position: sticky;
 }
 
 body header nav buttons {
@@ -41,8 +48,35 @@ body header nav buttons:hover {
 
 /* ---------------HOME PAGE---------------- */
 
+
+#content {
+    position: relative;
+    width: 100%; /* or any width you prefer */
+    height: 100vh; /* or any height you prefer */
+    overflow: hidden; /* to contain the pseudo-element */
+    font-family: "Great Vibes", cursive;
+}
+
+#content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('./img/home_bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3; /* set the opacity level (0.0 to 1.0) */
+    z-index: -1; /* ensure it stays behind the content of .container */
+}
+
+
+    
 #content .home-page,
-#content .menu-page
+#content .about-page
+
  {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -51,39 +85,53 @@ body header nav buttons:hover {
     padding: 20px;
 }
 
+
 #content .home-page h1 {
     grid-row: 1;
 }
 #content .home-page p {
-    grid-row: 2;
+    grid-row: 3;
+    grid-column: 2;
+    font-size: 24px;
 }
 #content .home-page img {
-    width: 400px;
+    width: 300px;
     grid-row: 2;
     grid-column: 1;
 }
 
 /* ---------------MENU PAGE------------------ */
+#content .menu-page {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 5fr 5fr;
+    gap: 20px;
+    padding: 20px;
 
+}
 #content .menu-page h1{
     grid-column: 2;
     font-family: "Great Vibes", cursive;
     justify-self: center;
 }
 #content .menu-page div {
+    display: grid;
     list-style-type: none;
-    display: flex;
+   
     flex-direction: column;
     grid-column: 2;
     grid-row: 2;
     justify-self: center;
     gap: 30px;
+    grid-template-columns: 1fr 1fr;
+    align-items: flex-end;
     
 }
 #content .menu-page div ul {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: repeat(3,1fr);
+   
+    /* grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(3,1fr); */
+    /* grid-column: 1; */
     justify-items: center;
     align-items: center;
 
@@ -91,20 +139,67 @@ body header nav buttons:hover {
 #content .menu-page div ul li {
     list-style-type: none;
     font-family: "Great Vibes", cursive;
+    /* font-weight: 500; */
     font-size: 24px;
     grid-column: 1;
 }
 
 #content .menu-page div ul img {
-    width: 100px;
+    width: 200px;
     grid-column: 2;
     grid-row: 1/3;
+    align-items: flex-end;
    
 }
 
 
+/* -------------ABOUT PAGE---------------- */
 
+#content .about-page h1 {
+    grid-column: 2;
+    justify-self: center;
+    grid-row: 1;
+}
 
+#content .about-page .schedule {
+    
+    display: grid;
+    grid-column: 2;
+    grid-row: 2;
+    gap: 30px;
+    justify-items: center;
+}
+
+#content .about-page .location {
+    display: grid;
+    grid-column: 2;
+    grid-row: 3;
+    /* gap: 30px; */
+    justify-items: center;
+    
+}
+#content .about-page h2 {
+    justify-self: center;
+    font-size: 32px;
+}
+
+#content .about-page .schedule p {
+  font-size: 24px;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+}
+#content .about-page .schedule span,
+#content .about-page .location
+ {
+    font-size: 24px;
+    font-weight: 100;
+  }
+#content .about-page .location h2 {
+    align-self: center;
+}
+
+/* -----------------FOOTER-------------------- */
 footer {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -114,6 +209,7 @@ footer {
     bottom:0;
     width: 100%;
     align-items: center;
+    font-family: 'Roboto';
 }
 
 footer p {
